--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
               }
               else{
                 //console.log(response)
-
+                $("#connecting").show()
                 //setup project by connecting with password and email
                 $.ajax({
                     type: 'POST',
